--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://foxmik0007.github.io/",
+  "homepage": "https://foxmik0007.github.io/TheTantara/",
   "name": "the-tantara",
   "version": "0.1.0",
   "private": true,
